--- a/CTAssetsPickerDemo/Info.plist
+++ b/CTAssetsPickerDemo/Info.plist
@@ -51,5 +51,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>App need this</string>
 </dict>
 </plist>
